[tool.poetry]
name = "ml_examples"
version = "0.1.0"
description = "Examples and implementations of machine learning techniques"
authors = ["Zachary Lee <zlee314@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
